@@ -1249,10 +1249,11 @@ static void string_table_build(xmlNodePtr node, wml_binary_t **wbxml)
   list =  string_table_collect_words(list);
 
   /* Don't add strings if there aren't any. (no NULLs please) */
-  if (list) {
-    list = 
-      string_table_add_many(string_table_sort_list(list), wbxml);
-  }
+  if (list)
+    {
+      list = 
+        string_table_add_many(string_table_sort_list(list), wbxml);
+    }
 
   /* Memory cleanup. */
   while (list_len(list))
